--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
             {{ partial "head.html" . }}
         {{ end }}
         {{ partialCached "css.html" . }}
+        {{ partial "pixel.html" . }}
     </head>
     {{ partial "analytics.html" . }}
     <style>
